# 1villageV2

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  how-to-deploy.md  jest.config.ts  next-intl.d.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.zed/: settings.json
drizzle/: 0000_known_absorbing_man.sql  0000_moaning_tiger_shark.sql  0000_sour_outlaw_kid.sql  0000_wet_green_goblin.sql  0000_worthless_fantastic_four.sql  0001_fat_zuras.sql  0001_smiling_fantastic_four.sql  0002_complete_mephisto.sql  0002_free_black_bolt.sql  0003_dapper_the_anarchist.sql  0003_light_tyger_tiger.sql  0004_broad_silk_fever.sql  0004_striped_falcon.sql  0005_green_lizard.sql  0005_melted_rhino.sql  0005_next_mysterio.sql  0006_striped_ego.sql  0007_exotic_chat.sql  0008_left_preak.sql  0008_luxuriant_professor_monster.sql  0008_old_bishop.sql  0009_broad_johnny_blaze.sql  0009_chubby_starhawk.sql  0009_dry_donald_blake.sql  0009_married_onslaught.sql  0009_reflective_energizer.sql  0010_dizzy_wolf_cub.sql  0010_sharp_firebird.sql  0011_eager_gertrude_yorkes.sql  0011_fluffy_red_shift.sql  0011_short_northstar.sql  0011_warm_anthem.sql  0015_typical_puppet_master.sql  0017_first_puff_adder.sql  (+2 more)
server-transcode-videos/: Cargo.toml  Dockerfile.dev  README.md
server-transcode-videos/src/: event_handler.rs  main.rs  transcode.rs  video_utils.rs
server-transcode-videos/src/local/: mod.rs
server-transcode-videos/src/s3/: download_object.rs  get_object_size.rs  mod.rs  upload_directory.rs
(+1036 files in other folders)
