[package]
name = "server-transcode-videos"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.0"
aws-sdk-s3 = "1.0"
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros", "process", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
url = "2.0"
futures = "0.3"
